chores(user): Thêm trường my rank API get users rank
