# docs/swagger.json
@@ -1313,6 +1313,11 @@
         },
         "/client/users/ranks": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "API bao gồm phân trang",
                 "consumes": [
                     "application/json"
@@ -6714,6 +6719,12 @@
                     "items": {
                         "$ref": "#/definitions/userdto.UserRankDTO"
                     }
+                },
+                "yourInfo": {
+                    "$ref": "#/definitions/userdto.UserRankDTO"
+                },
+                "yourRank": {
+                    "type": "integer"
                 }
             }
         },
