# internal/boostraps/router.go
@@ -192,7 +192,7 @@ func InitRoute(db *gorm.DB, redisClient *redis.Client) *gin.Engine {
 
 		//client user API
 		v1.GET("/client/users/my-good-deeds", middlewares.AuthGuard, userHandler.GetUserGoodDeed)
-		v1.GET("/client/users/ranks", userHandler.GetUserRanks)
+		v1.GET("/client/users/ranks", middlewares.AuthGuard, userHandler.GetUserRanks)
 
 		// user API
 		v1.POST("/users/good-deeds", middlewares.AuthGuard, userHandler.CreateGoodDeed)
